fix google login z-index

--- a/src/view/components/buttons/GoogleLogin.module.scss
+++ b/src/view/components/buttons/GoogleLogin.module.scss
@@ -16,6 +16,7 @@
     position: absolute;
     margin-top: 28rem;
     margin-left: 17rem;
+    z-index: 2;
 
     &.rowReverse {
         margin-right: 33rem;
